--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -2,33 +2,51 @@
 .evenements-page {
 
     margin: 0 auto;
-    background-color: yellow;
+    background-color: #845ec2;
     width: 80%;
     height: 500px;
+    border-radius: 7px;
+        box-shadow: 5px 7px 12px 1px rgba(0,0,0,0.31);
+    transition: 500ms;
+
+}
+
+.evenements-page:hover {
+    cursor: pointer;
+    transform: scale(1.01);
+    background-color: #8b64c9;
+    box-shadow: 5px 7px 12px 1px rgba(0,0,0,0.14);
+
 }
 
 .about-us-page {
 
     margin: 0 auto;
-    background-color: rgb(0, 255, 21);
+    background-color: #d65db1;
     width: 80%;
     height: 500px;
+    border-radius: 7px;
+        box-shadow: 5px 7px 12px 1px rgba(0,0,0,0.31);
 }
 
 .contact-page {
 
     margin: 0 auto;
-    background-color: rgb(63, 63, 63);
+    background-color: #ff6f91;
     width: 80%;
     height: 500px;
+    border-radius: 7px;
+        box-shadow: 5px 7px 12px 1px rgba(0,0,0,0.31);
 }
 
 .extras-page {
     margin-top: 60px;
     margin: 0 auto;
-    background-color: rgb(247, 0, 255);
+    background-color: #ff9671;
     width: 80%;
     height: 500px;
+    border-radius: 7px;
+    box-shadow: 5px 7px 12px 1px rgba(0,0,0,0.14);
 }
 
 .footer{
@@ -42,13 +60,13 @@
 
 body {
     margin: 0px;
-    background-color: rgb(255, 255, 255);
+    background-color: #fefaf0;
 }
 
 .navbar {
     text-align: center;
     top: 0;
-    background-color: thistle;
+    /*background-color: thistle;*/
     display: block;
     width: 100%;
     position: sticky;
@@ -71,7 +89,8 @@ li a {
     margin: 0 auto;
     width: 100px;
     padding: 15px;
-    background-color: red;
+    /*background-color: red;*/
+    text-decoration: none;
 }
 
 .left {
@@ -89,7 +108,8 @@ li a {
 }
 
 .language a {
-    background-color: red;
+    /*background-color: red;*/
+    text-decoration: none;
 }
 
 .navbar.scrolled.scrolled {
